--- a/Index.html
+++ b/Index.html
@@ -285,6 +285,27 @@
             setupScreen.style.display = 'flex';
         }
 
+        // Fullscreen API with vendor prefixes for better compatibility
+        function toggleFullscreen() {
+            if (!document.fullscreenElement) {
+                if (document.documentElement.requestFullscreen) {
+                    document.documentElement.requestFullscreen();
+                } else if (document.documentElement.webkitRequestFullscreen) { /* Safari */
+                    document.documentElement.webkitRequestFullscreen();
+                } else if (document.documentElement.msRequestFullscreen) { /* IE11 */
+                    document.documentElement.msRequestFullscreen();
+                }
+            } else {
+                if (document.exitFullscreen) {
+                    document.exitFullscreen();
+                } else if (document.webkitExitFullscreen) { /* Safari */
+                    document.webkitExitFullscreen();
+                } else if (document.msExitFullscreen) { /* IE11 */
+                    document.msExitFullscreen();
+                }
+            }
+        }
+
         // Event Listeners
         startButton.addEventListener('click', () => {
             const team1Name = team1NameInput.value || "Team 1";
@@ -338,22 +359,7 @@
             resetAppState();
         });
 
-        fullscreenButton.addEventListener('click', () => {
-            const body = document.body;
-            if (!document.fullscreenElement) {
-                if (body.requestFullscreen) {
-                    body.requestFullscreen();
-                } else if (body.webkitRequestFullscreen) { /* Safari on iOS */
-                    body.webkitRequestFullscreen();
-                } else if (body.msRequestFullscreen) { /* IE11 */
-                    body.msRequestFullscreen();
-                }
-            } else {
-                if (document.exitFullscreen) {
-                    document.exitFullscreen(); 
-                }
-            }
-        });
+        fullscreenButton.addEventListener('click', toggleFullscreen);
 
         team1Colors.querySelectorAll('.color-swatch').forEach(swatch => {
             swatch.addEventListener('click', () => {
