--- a/Index.html
+++ b/Index.html
@@ -9,8 +9,10 @@
             font-family: sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f0f0f0;
+            background-color: #ffffff; /* Changed to white to prevent color flash */
             text-align: center;
+            height: 100vh;
+            overflow: hidden; /* This prevents the body from scrolling */
         }
 
         .container {
@@ -96,7 +98,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: white;
+            background-color: white; /* Removed from here */
             display: flex;
             flex-direction: column;
             justify-content: center;
