--- a/Index.html
+++ b/Index.html
@@ -315,8 +315,8 @@
         </div>
         <div class="scoring-options">
             <label>
-                <input type="radio" name="scoring-type" value="full-tennis-points" checked>
-                Full Tennis Points
+                <input type="radio" name="scoring-type" value="full-tennis-pointsa" checked>
+                Full Tennis Points B
             </label>
             <label>
                 <input type="radio" name="scoring-type" value="point-counter-americano">
