--- a/Index.html
+++ b/Index.html
@@ -315,16 +315,16 @@
         </div>
         <div class="scoring-options">
             <label>
-                <input type="radio" name="scoring-type" value="full-tennis-pointsa" checked>
-                Full Tennis Points B
-            </label>
-            <label>
-                <input type="radio" name="scoring-type" value="point-counter-americano">
-                Point Counter (Americano)
-            </label>
-            <label>
                 <input type="radio" name="scoring-type" value="tennis-games">
                 Tennis Games
+            </label>    
+            <label>
+                <input type="radio" name="scoring-type" value="point-counter-americano">
+                Point/Game Counter (Americano)
+            </label>
+            <label>
+                <input type="radio" name="scoring-type" value="full-tennis-points" checked>
+                Tennis Points
             </label>
         </div>
         <button class="start-button" id="start-button">Start Match</button>
